unpackaged/main/default/objects/Observation_Form__c/fields/Proper_Grammar__c.field-meta.xml
<CustomField>
    <fullName>Proper_Grammar__c</fullName>
    <label>Proper Grammar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>