unpackaged/main/default/objects/Observation_Form__c/fields/Proper_PVH__c.field-meta.xml
<CustomField>
    <fullName>Proper_PVH__c</fullName>
    <inlineHelpText>Ecommerce calls.</inlineHelpText>
    <label>Proper PVH Tool Comments or Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>