unpackaged/main/default/objects/Observation_Form__c/fields/Proper_Spelling_of_Cuustomer_Name_Email__c.field-meta.xml
<CustomField>
    <fullName>Proper_Spelling_of_Cuustomer_Name_Email__c</fullName>
    <inlineHelpText>Proper Spelling of Customer Name/Updating Name in Profile Field</inlineHelpText>
    <label>Proper Spelling of Customer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>