unpackaged/main/default/objects/Observation_Form__c/fields/Proper_Ticket_Coding__c.field-meta.xml
<CustomField>
    <fullName>Proper_Ticket_Coding__c</fullName>
    <inlineHelpText>Chat: Zendesk, Email: Additionally Updating Name in Profile Field.</inlineHelpText>
    <label>Proper Ticket Coding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>