unpackaged/main/default/objects/Observation_Form__c/fields/Structure_Phone_Total__c.field-meta.xml
<CustomField>
    <fullName>Structure_Phone_Total__c</fullName>
    <formula>(IF( ISPICKVAL(  Ownership_Call__c , &quot;Pass&quot;)  ||  ISPICKVAL( Ownership_Call__c , &quot;N/A&quot;)  , 1, 0 ) +  IF( ISPICKVAL(  Proper_Understanding_of_Issue__c  , &quot;Pass&quot;)  ||  ISPICKVAL(  Proper_Understanding_of_Issue__c  , &quot;N/A&quot;)  , 1, 0) +  IF( ISPICKVAL(  Provide_Correct_Information__c  , &quot;Pass&quot;)  ||  ISPICKVAL( Provide_Correct_Information__c , &quot;N/A&quot;)  , 1, 0))  /  3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure Total % (Phone)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>