unpackaged/main/default/objects/Observation_Form__c/fields/Structure_Total_Chat__c.field-meta.xml
<CustomField>
    <fullName>Structure_Total_Chat__c</fullName>
    <formula>(IF( ISPICKVAL(  Proper_Spelling__c , &quot;Pass&quot;)  ||  ISPICKVAL(  Proper_Spelling__c , &quot;N/A&quot;)  , 1, 0 ) +  IF( ISPICKVAL(  Proper_Grammar__c  , &quot;Pass&quot;)  ||  ISPICKVAL(  Proper_Grammar__c  , &quot;N/A&quot;)  , 1, 0) +  IF( ISPICKVAL(   Ownership__c  , &quot;Pass&quot;)  ||  ISPICKVAL(  Ownership__c , &quot;N/A&quot;)  , 1, 0))  /  3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Structure Total % (Chat)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>