unpackaged/main/default/objects/Observation_Form__c/fields/Talking_Over_Customer__c.field-meta.xml
<CustomField>
    <fullName>Talking_Over_Customer__c</fullName>
    <label>Talking Over Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>