unpackaged/main/default/objects/Observation_Form__c/fields/Tone_and_Warmth__c.field-meta.xml
<CustomField>
    <fullName>Tone_and_Warmth__c</fullName>
    <label>Tone and Warmth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>