unpackaged/main/default/objects/Observation_Form__c/fields/Total_Chat_Observation_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Chat_Observation_Score__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Chat_Observation_Form&quot;,( Opening_Total_Chat__c + Structure_Total_Chat__c + Etiquette_Total__c + Handling_Skills_Total_Chat__c + Procedures_Total_Chat__c + Closing_Total_Chat__c ) / 6, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Chat Observation Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>