unpackaged/main/default/objects/Observation_Form__c/fields/Total_Email_Observation_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Email_Observation_Score__c</fullName>
    <formula>IF( OR(RecordType.DeveloperName = &quot;Email_Observation_Form&quot;, RecordType.DeveloperName = &quot;Email_Observation_Form_True_Co&quot;), (Opening_Total_Email__c + Structure_Total_Email__c + Etiquette_Total__c + Handling_Skills_Total__c + Procedures_Total_Email__c + Closing_Total_Email__c) /6, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Email Observation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>