unpackaged/main/default/objects/Observation_Form__c/fields/Total_Phone_Observation_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Phone_Observation_Score__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Phone_Observation_Form&quot;,( Greeting_Total__c + Structure_Phone_Total__c + Phone_Etiquette_Total__c + Call_Handling_Skills_Total__c + Order_Management_Total__c + Procedures_Total_Phone__c + Closing_Total_Phone__c ) / 7, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Phone Observation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>