unpackaged/main/default/objects/Observation_Form__c/fields/Use_of_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Customer_Name__c</fullName>
    <label>Use of Customer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>