unpackaged/main/default/objects/Observation_Form__c/fields/Use_Of_Inappropriate_Language__c.field-meta.xml
<CustomField>
    <fullName>Use_Of_Inappropriate_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if answer is &quot;Yes.&quot;</inlineHelpText>
    <label>Use of Inappropriate Language</label>
    <type>Checkbox</type>
</CustomField>