unpackaged/main/default/objects/Observation_Form__c/fields/Web_ID_Not_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Web_ID_Not_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if answer is &quot;Yes.&quot;</inlineHelpText>
    <label>Web ID Not Obtained With Order Placement</label>
    <type>Checkbox</type>
</CustomField>