unpackaged/main/default/objects/Observation_Form__c/recordTypes/Chat_Observation_Form.recordType-meta.xml
<RecordType>
    <fullName>Chat_Observation_Form</fullName>
    <active>true</active>
    <description>Customer Service Chat Observation Form Scorecard</description>
    <label>Chat Observation Form</label>
</RecordType>