unpackaged/main/default/objects/Observation_Form__c/recordTypes/Email_Observation_Form.recordType-meta.xml
<RecordType>
    <fullName>Email_Observation_Form</fullName>
    <active>true</active>
    <description>Customer Service Email Observation Form Scorecard and Summary.</description>
    <label>Email &amp; Web Observation Form</label>
</RecordType>