unpackaged/main/default/objects/Observation_Form__c/recordTypes/Email_Observation_Form_True_Co.recordType-meta.xml
<RecordType>
    <fullName>Email_Observation_Form_True_Co</fullName>
    <active>true</active>
    <description>True &amp; Co - Customer Service Email Observation Form Scorecard and Summary.</description>
    <label>Email &amp; Web Observation Form - True &amp; Co</label>
</RecordType>