unpackaged/main/default/objects/Observation_Form__c/recordTypes/Phone_Observation_Form.recordType-meta.xml
<RecordType>
    <fullName>Phone_Observation_Form</fullName>
    <active>true</active>
    <description>Customer Service Phone Observation Form Scorecard and Summary</description>
    <label>Phone Observation Form</label>
</RecordType>