unpackaged/main/default/objects/Observation_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Brand__c</columns>
    <columns>Case_Intake_Channel__c</columns>
    <columns>Auto_Fail__c</columns>
    <columns>Total_Email_Observation_Score__c</columns>
    <columns>Total_Chat_Observation_Score__c</columns>
    <columns>Total_Phone_Observation_Score__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>PVH_Corp</role>
        <role>Supervisor_Tier_3_CSR</role>
    </sharedTo>
</ListView>