unpackaged/main/default/objects/Observation_Form__c/listViews/All_Observation_Forms_CDD_Individual.listView-meta.xml
<ListView>
    <fullName>All_Observation_Forms_CDD_Individual</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Case_Intake_Channel__c</columns>
    <columns>Auto_Fail__c</columns>
    <columns>Total_Email_Observation_Score__c</columns>
    <columns>Total_Chat_Observation_Score__c</columns>
    <columns>Total_Phone_Observation_Score__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Owner__c</field>
        <operation>contains</operation>
        <value>capos</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/1/2020 12:00 AM</value>
    </filters>
    <label>All Observation Forms (CDD) - Individual</label>
    <sharedTo>
        <role>PVH_Corp</role>
    </sharedTo>
</ListView>