unpackaged/main/default/objects/Observation_Form__c/listViews/Copy_of_All_Observation_Forms_Caroline.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Observation_Forms_Caroline</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Case_Intake_Channel__c</columns>
    <columns>Auto_Fail__c</columns>
    <columns>Total_Email_Observation_Score__c</columns>
    <columns>Total_Chat_Observation_Score__c</columns>
    <columns>Total_Phone_Observation_Score__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>1/31/2021</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>ACaia</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/28/2021 12:00 AM</value>
    </filters>
    <label>All Observation Forms - Aliyah</label>
    <sharedTo>
        <role>PVH_Corp</role>
    </sharedTo>
</ListView>